Fixed left white space error when viewing the page on mobile.

--- a/src/components/partials/footer/footer.css
+++ b/src/components/partials/footer/footer.css
@@ -7,6 +7,11 @@
 
 .logo-pjud{
   height: 200px;
-  margin: 20px;
   width: auto;
+}
+
+@media screen and (max-width: 768px) {
+  .logo-pjud{
+    height: 150px;
+  }
 }
